# graphics

./: .gitignore  Cargo.toml  flake.nix  nohup.out
cpu/: Cargo.toml
cpu/src/: app.rs  lib.rs  main.rs
shaders/: Cargo.toml  build.rs  rust-toolchain.toml
shaders/shader-crate/: Cargo.toml
shaders/shader-crate/src/: lib.rs
shaders/src/: main.rs
src/: main.rs
